--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
   , "keywords" : [
         "time"
       , "parse"
+      , "parsing"
       , "format"
       , "validate"
     ]
   , "repository" : {
         "type" : "git"
       , "url"  : "https://github.com/zever/time.git"
-  }
+    }
   , "bugs": {
         "url" : "https://github.com/zever/time/issues"
     }
   , "devDependencies" : {
-      "mocha"  : "1.4.1"
-    , "should" : "1.1.0"
-  }
+        "mocha"  : "1.4.1"
+      , "should" : "1.1.0"
+    }
   , "scripts" : {
-    "test" : "mocha"
-  }
+        "test" : "mocha"
+    }
   , "license" : "MIT"
 }
