--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
     "name"        : "time-js"
-  , "version"     : "0.0.1"
+  , "version"     : "0.0.2"
   , "author"      : "Zack Dever <zackdever@gmail.com> (http://zackdever.com/)"
   , "description" : "date-agnostic time parsing for node and the browser"
   , "keywords" : [
         "time"
       , "parse"
+      , "parsing"
       , "format"
+      , "formatting"
       , "validate"
+      , "validation"
     ]
   , "repository" : {
         "type" : "git"
