--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-    "name"        : "time-js"
-  , "version"     : "0.0.2"
-  , "author"      : "Zack Dever <zackdever@gmail.com> (http://zackdever.com/)"
-  , "description" : "date-agnostic time parsing for node and the browser"
-  , "keywords" : [
-        "time"
-      , "parse"
-      , "parsing"
-      , "format"
-      , "formatting"
-      , "validate"
-      , "validation"
-    ]
-  , "repository" : {
-        "type" : "git"
-      , "url"  : "https://github.com/zever/time.git"
-  }
-  , "bugs": {
-        "url" : "https://github.com/zever/time/issues"
-    }
-  , "devDependencies" : {
-      "mocha"  : "1.4.1"
-    , "should" : "1.1.0"
-  }
-  , "scripts" : {
-    "test" : "mocha"
-  }
-  , "license" : "MIT"
+  "name": "time-js",
+  "version": "0.0.4",
+  "author": "Zack Dever <zackdever@gmail.com>",
+  "description": "date-agnostic time parsing for node and the browser",
+  "main": "time.js",
+  "keywords": [
+    "time",
+    "parse",
+    "parsing",
+    "format",
+    "formatting",
+    "validate",
+    "validation"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zever/time.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zever/time/issues"
+  },
+  "devDependencies": {
+    "mocha": "1.4.1",
+    "should": "1.1.0"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "license": "MIT"
 }
